--- a/index.html
+++ b/index.html
@@ -4,5 +4,5 @@
 	</head>
 <body>
 	<img src="https://www.elcomercio.com/files/article_main/uploads/2016/09/29/57ed6f5de00d3.jpeg">
-
+	</body>
 </html>
