--- a/index.html
+++ b/index.html
@@ -1,9 +1,150 @@
-<html>
-	<head>
-		<title>hector</title>
-	</head>
+﻿<html>
+<center>
+<img src=".\imagenes\game.jpg" alt="encabezado" style="width:800px;height:150px;border:0";>
+</center>
+
+<br>
+<header>
+<div id="header">
+    <ul class="redes">
+  <img src=".\imagenes\social.png" alt="redes sociales"  style="width:170px;height:70px;" usemap="#mapa" style="float:left">
+<map name="mapa">
+<area shape="rect" coords="1,0,60,62" alt="facebook" href="http://twitter.com/Hector4MB/">
+<area shape="rect" coords="110,1,61,62" alt="instagram" href="http://instagram.com.sv/hector4e">
+<area shape="rect" coords="165,1,62,62" alt="twitter" href="http://facebook.com.sv">
+</map>
+</ul>
+</div>
+</header>
+<center>  <h1 style="text-color:DodgerBlue;">! Bienvenidos/as a THE GAMES!</h1> </center>
+<head>
+<title> THE GAMES </title>
+<link rel="stylesheet" type="text/css" href=".\estilos css\estilo 2.css" media="screen" />
+</head>
+
+<br>
 <body>
-	<H1>HUGO TE QUIERE</h1>
-	<img src="https://www.elcomercio.com/files/article_main/uploads/2016/09/29/57ed6f5de00d3.jpeg">
-	</body>
+<header>
+<div id="header">
+    <ul class="nav">
+       <li><a href="index.html" target="_sef">Inicio</a></li>
+       <li><a href="index.html#C6">Categorías</a>
+       <ul>
+                <li><a href="accion.html" target="_sef">Accion</a></li>
+                <li><a href="deporte.html" target="_sef">Deportes</a></li>
+                <li><a href="carrera.html" target="_sef">Carrera</a></li>
+                <li><a href="musica.html" target="_sef">Musica</a></li>
+                <li><a href="aventura.html" target="_sef">Aventura</a></li>
+                <li><a href="palabra.html" target="_sef">Palabras</a></li>
+       </ul>
+       </li>
+       <li><a href="Historia.html" target="_sef">Historia</a></li>
+       <li><a href="contacto.html" target="_sef">Contactanos</a></li>
+        <li><a href="acerca.html" target="_sef">Quienes Somos</a></li>
+    </ul>
+</div>
+</header>
+<br><br><br>
+<center>
+<div class="slider">
+    <ul>
+        <li><a href="pubg.html">
+            <img src=".\imagenes\4p.jpg"></a>
+        </li>
+        <li><a href="apex.html">
+               <img src=".\imagenes\apex.jpg"></a>
+       </li>
+       <li><a href="asphalt.html">
+         <img src=".\imagenes\aa.jpg"></a>
+       </li>
+       <li><a href="minecraft.html">
+         <img src=".\imagenes\1mc.jpg"></a>
+       </li>
+</ul>
+</center>
+<br>
+<center>
+
+<h1>Concepto de VideoJuegos</h1>
+  <p>
+  Un videojuego es un juego electrónico en el que una o más personas interactúan, por medio de un controlador, con un dispositivo que muestra imágenes de video.
+  Este dispositivo electrónico, conocido genéricamente como «plataforma», puede ser una computadora, una máquina arcade, una videoconsola o un dispositivo portátil,
+   como por ejemplo un teléfono móvil. Los videojuegos son, año por año, una de las principales industrias del arte y el entretenimiento.<br><br>
+
+  Al dispositivo de entrada, usado para manipular un videojuego se le conoce como controlador de videojuego, o mando, y varía dependiendo de la plataforma. Por ejemplo,
+   un controlador podría únicamente consistir de un botón y una palanca de mando o joystick, mientras otro podría presentar una docena de botones y una o más palancas
+    (mando). Los primeros juegos informáticos solían hacer uso de un teclado para llevar a cabo la interacción, o bien requerían que el usuario adquiriera un joystick
+     con un botón como mínimo.<br><br>
+
+  Muchos juegos de computadora modernos permiten o exigen que el usuario utilice un teclado y un ratón de forma simultánea. Entre los controladores más típicos están
+   los gamepads, joysticks, teclados, ratones y pantallas táctiles. Generalmente, los videojuegos hacen uso de otras maneras, aparte de la imagen, de proveer la
+   interactividad e información al jugador. El audio es casi universal, usándose dispositivos de reproducción de sonido, tales como altavoces y auriculares. Otro
+   tipo de realimentación se hace a través de periféricos hápticos que producen vibración o retroalimentación de fuerza, usándose a veces la vibración para simular
+   la retroalimentación de fuerza.<br><br>
+</p>
+</center>
+<header>
+  <div id="header">
+    <ul class="cate">
+<center>
+<b><h2 id="C6">Categorías de videojuegos</h2></b>
+</center>
+</ul>
+</div>
+</header>
+<br>
+<br>
+<center>
+<table style="width:80%"; border="0";>
+
+    <tr align="center">
+    <td><a href="accion.html">
+      <img src=".\imagenes\accion.png" alt="accion" style="width:230px;height:200px;border:0;" target="_sef">
+    </a></td>
+
+    <td><a href="deporte.html">
+      <img src=".\imagenes\deporte.png" alt="deportes" style="width:230px;height:200px;border:0;" target="_sef">
+    </a></td>
+    <td><a href="carrera.html">
+      <img src=".\imagenes\carrera.png" alt="carrera" style="width:230px;height:200px;border:0;" target="_sef">
+    </a></td>
+  </tr>
+
+    <tr align="center">
+
+    <td><a href="musica.html">
+      <img src=".\imagenes\musica.png" alt="musica" style="width:230px;height:200px;border:0;" target="_sef">
+    </a></td>
+    <td><a href="aventura.html">
+      <img src=".\imagenes\aventura.png" alt="aventura" style="width:230px;height:200px;border:0;" target="_sef">
+    </a></td>
+    <td><a href="palabra.html">
+      <img src=".\imagenes\palabra.png" alt="palabra" style="width:230px;height:200px;border:0;" target="_sef">
+    </a></td>
+  </tr>
+    </table>
+</center>
+<br><br>
+
+
+
+
+
+
+
+
+
+
+
+<BR><BR><BR>
+  <header>
+    <div class="copy">
+  <hr>
+  <center>
+  THE GAMES<BR>
+  "Copyright © Todos los Derechos Reservados"
+  </center>
+   </div>
+  </header>
+</body>
 </html>
