--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <center>  <h1 style="text-color:DodgerBlue;">! Bienvenidos/as a THE GAMES!</h1> </center>
 <head>
 <title> THE GAMES </title>
-<link rel="stylesheet" type="text/css" href=".\estilos css\estilo 2.css" media="screen" />
+<link rel="stylesheet" type="text/css" href="estilo 2.css" media="screen" />
 </head>
 
 <br>
