--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ﻿<html>
 <center>
-<img src=".\imagenes\game.jpg" alt="encabezado" style="width:800px;height:150px;border:0";>
+<img src="game.jpg" alt="encabezado" style="width:800px;height:150px;border:0";>
 </center>
 
 <br>
