--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <header>
 <div id="header">
     <ul class="redes">
-  <img src=".\imagenes\social.png" alt="redes sociales"  style="width:170px;height:70px;" usemap="#mapa" style="float:left">
+  <img src="social.png" alt="redes sociales"  style="width:170px;height:70px;" usemap="#mapa" style="float:left">
 <map name="mapa">
 <area shape="rect" coords="1,0,60,62" alt="facebook" href="http://twitter.com/Hector4MB/">
 <area shape="rect" coords="110,1,61,62" alt="instagram" href="http://instagram.com.sv/hector4e">
