--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <li><a href="palabra.html" target="_sef">Palabras</a></li>
        </ul>
        </li>
-       <li><a href="Historia.html" target="_sef">Historia</a></li>
+       <li><a href="historia.html" target="_sef">Historia</a></li>
        <li><a href="contacto.html" target="_sef">Contactanos</a></li>
         <li><a href="acerca.html" target="_sef">Quienes Somos</a></li>
     </ul>
