--- a/acerca.html
+++ b/acerca.html
@@ -2,7 +2,7 @@
 
 <head>
 <title> THE GAMES </title>
-<link rel="stylesheet" type="text/css" href=".\estilos css\estilo 2.css" media="screen" />
+<link rel="stylesheet" type="text/css" href="estilo 2.css" media="screen" />
 </head>
 
 
@@ -30,7 +30,7 @@
 </header>
 <div id="header">
     <ul class="redes">
-  <img src=".\imagenes\social.png" alt="redes sociales"  style="width:170px;height:70px;" usemap="#mapa" style="float:left">
+  <img src="social.png" alt="redes sociales"  style="width:170px;height:70px;" usemap="#mapa" style="float:left">
 <map name="mapa">
 <area shape="rect" coords="1,0,60,62" alt="facebook" href="http://twitter.com/Hector4MB/">
 <area shape="rect" coords="110,1,61,62" alt="instagram" href="http://instagram.com.sv/hector4e">
@@ -41,7 +41,7 @@
 <br><br><br>
 <center>
 <h1>Quienes Somos</h1>
-<img src=".\imagenes\game.jpg"  alt="logo" style="width:1000;height:300">
+<img src="game.jpg"  alt="logo" style="width:1000;height:300">
 <p>Somos una empresa que desea que la poblacion se mantenga informada de las nuevas tendencias de VideoJuegos
   las cuales cambian a cada momento y las diferntes clasificaciones de juegos de video que nos ofrece el amplio
   portafolio de empresas de dedicadas al diseño y construccion de videojuegos los cuales se pueden jugar en
@@ -55,7 +55,7 @@
       Conoce los mejores juegos dentro de su categoria con nuestro sistema de claificasion de nuestras variadas categorias de
    Tenemos como propósito buscar todos los días la mejor forma de dar más de lo esperado a nuestros vistantes a nuestro sitio web.</p>
 
-<img src=".\imagenes\js.png"  alt="logogame" style="width:400;height:300">
+<img src="js.png"  alt="logogame" style="width:400;height:300">
 <br><br>
 <table style="width:80%"; border="0";>
 <tr align="center">
